--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ colorlog = "^5.0.1"
 requests = "^2.26.0"
 pymongo = "^3.12.0"
 dnspython = "^2.1.0"
+black = "^21.7b0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
