--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 ###################
 # compiled source #
 ###################
-number_of_checks.txt
-port.txt
-service_started_time.json
-/logs
+*/number_of_checks.txt
+*/port.txt
+*/service_started_time.json
+*/logs
